# InspireSkill

./: .gitignore  LICENSE  README.md  SKILL.md
cli/: pyproject.toml
cli/examples/: setup_ssh_dropbear.sh
cli/examples/workflows/: retrieve_job_log.yml  run_bridge_action.yml
cli/inspire/: __init__.py  compute_groups.py
cli/inspire/accounts/: __init__.py  migration.py  storage.py
cli/inspire/bridge/: __init__.py  forge.py
cli/inspire/bridge/tunnel/: __init__.py  config.py  models.py  rtunnel.py  scp.py  ssh.py  ssh_exec.py
cli/inspire/cli/: __init__.py  context.py  logging_setup.py  main.py
cli/inspire/cli/commands/: __init__.py  run.py  update.py
cli/inspire/cli/formatters/: __init__.py  human_formatter.py  json_formatter.py
cli/inspire/config/: __init__.py  env.py  load.py  load_account_layer.py  load_accounts.py  load_common.py  load_env.py  load_layers.py  load_runtime.py  models.py  rtunnel_defaults.py  schema.py  schema_categories.py  schema_models.py  ssh_runtime.py  toml.py  workspaces.py
cli/inspire/platform/: __init__.py
cli/scripts/: bootstrap_inspire_env.sh  inspire.env.template
cli/scripts/reverse_capture/: README.md  analyze.py  capture.py  known_endpoints.py
cli/tests/: __init__.py  conftest.py  test_account_commands.py  test_account_migration.py  test_bridge_exec.py  test_bridge_scp.py  test_browser_api_metrics.py  test_browser_api_ray_jobs.py  test_browser_api_servings.py  test_cli_commands.py  test_cli_smoke.py  test_compute_group_autoselect.py  test_config_files.py  test_cpu_compute_group_fixes.py  test_debug_logging.py  test_error_utils.py  test_forge_utils.py  test_hpc_commands.py  test_id_resolver.py  test_image_commands.py  test_init_encoding.py  test_main_help.py  test_notebook_alias_defaults.py  test_notebook_commands.py  test_notebook_create_flow.py  test_notebook_install_deps.py  test_notebook_jupyter.py  test_notebook_metrics.py  test_notebook_post_start.py  test_notebook_rtunnel_commands.py  test_notebook_rtunnel_flow.py  test_notebook_rtunnel_helpers.py  test_notebook_rtunnel_probe.py  test_notebook_rtunnel_verify.py  test_notebook_top.py  test_notebook_wait.py  test_openapi_client_config.py  test_openapi_hpc_jobs.py  test_openapi_inference_servings.py  test_openapi_jobs.py  (+18 more)
(+143 files in other folders)
