[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inspire-skill"
version = "1.0.1"
description = "CLI for the Inspire training platform: notebook lifecycle, distributed/HPC job submission, SSH tunneling, image and resource ops"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Inspire Platform Team"}
]
keywords = ["inspire", "hpc", "training", "cli", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28.0",
    "click>=8.0.0",
    "playwright>=1.57.0",
    "tomli>=1.2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
]

[project.scripts]
inspire = "inspire.cli.main:cli"

[project.urls]
Documentation = "https://github.com/realZillionX/InspireSkill"
Repository = "https://github.com/realZillionX/InspireSkill"

[tool.setuptools]
packages = {find = {where = ["."], include = ["inspire*"], exclude = ["tests*"]}}

[tool.setuptools.package-data]
inspire = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests requiring live API access",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "black>=23.0.0",
    "ruff>=0.0.280",
    "commitizen>=3.12.0",
    "pre-commit>=3.6.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.1"
version_files = [
    "inspire/__init__.py:__version__",
    "pyproject.toml:^version"
]
tag_format = "v$version"
update_changelog_on_bump = false
